<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="lamp_on"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_on_short_label"
        android:shortcutLongLabel="@string/shortcut_on_long_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.lampsmart.controller"
            android:targetClass="com.lampsmart.controller.TurnOnActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="lamp_off"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_off_short_label"
        android:shortcutLongLabel="@string/shortcut_off_long_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.lampsmart.controller"
            android:targetClass="com.lampsmart.controller.TurnOffActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="lamp_warm"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_warm_short_label"
        android:shortcutLongLabel="@string/shortcut_warm_long_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.lampsmart.controller"
            android:targetClass="com.lampsmart.controller.WarmPresetActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="lamp_cool"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_cool_short_label"
        android:shortcutLongLabel="@string/shortcut_cool_long_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.lampsmart.controller"
            android:targetClass="com.lampsmart.controller.CoolPresetActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="lamp_night"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_night_short_label"
        android:shortcutLongLabel="@string/shortcut_night_long_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.lampsmart.controller"
            android:targetClass="com.lampsmart.controller.NightModeActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>
